--- a/CV/index.html
+++ b/CV/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <head>
-    <link href="Image-Rect.png" rel="icon" />
+    <link href="images/Image-Rect.png" rel="icon" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -17,7 +17,7 @@
       <!-- headsection -->
       <div class="headsection">
         <div class="imgp">
-          <img class="photo" src="Image-Rect.png" alt="Candidate-Photo" />
+          <img class="photo" src="images/Image-Rect.png" alt="Candidate-Photo" />
         </div>
         <div class="namepost">
           <p class="name">TRIPTI GAUTAM</p>
@@ -32,7 +32,7 @@
           <div class="aboutsection">
             <p class="About">ABOUT ME</p>
             <p class="detail">
-              It graduate with a strong background, confident and
+              IT graduate with a strong background, confident and
               problem-solving, a proven team player with effective communication
               skills. Eager to advance my coding abilities and obtain real-world
               web development experience.
