--- a/broadway-course/index.html
+++ b/broadway-course/index.html
@@ -14,7 +14,7 @@
     <main>
       <img src="images/mouse.svg" alt="" height="50px" width="50px" />
       <h2 class="course">Our Course Status</h2>
-      <p class="detail">
+      <p class="detail">gi
         Take a glance at the status of our classes. Choose your course, let us
         know your time and we will fit you in <br>the required schedule.
       </p>
