cotiviti different section added

--- a/Cotiviti/index.html
+++ b/Cotiviti/index.html
@@ -23,5 +23,34 @@
         </nav>
       </div>
     </header>
+    <main>
+      <!-- hero-section -->
+      <section id="hero">
+        <div class="container"> 
+          <p class="Grow">Growing Bigger <br> Creating More Opportunities</p>
+          <div id="white-box">
+            <small>We are...</small>
+            <h2>Cotiviti Nepal Pvt. Ltd.</h2>
+            <p>(Formerly known as Verscend Technologies Pvt. Ltd.)<br>
+            A subsidiary of COTIVITI INC. (formerly known as Verscend INC)</p>
+          </div>
+        </div>
+      </section>
+      <!-- building-wrapper -->
+      <section id="building-wrapper">
+        <div class="container imagewrapper">
+          <div class="wrapper content">
+            <p>For future career opportunities in Nepal, please visit our partner,&nbsp;<a href="#">Infinite Computer Solutions</a></p>
+            
+            <p>Visit <a href="#">Cotiviti's website</a> for one more information on our healthcare and retail solutions. The Cotiviti Nepal website will be archived.</p>
+          </div>
+        </div>
+      </section>
+      <!-- image section -->
+      <section id="imgsection">
+        
+      </section>
+      <!--  -->
+    </main>
   </body>
 </html>
