cotiviti footer done"

--- a/Cotiviti/index.html
+++ b/Cotiviti/index.html
@@ -64,7 +64,9 @@
         </div>
       </section>
       <!-- image section -->
-      <section id="imgsection"></section>
+      <section id="imgsection">
+        
+      </section>
       <!--  -->
       <!-- join the team section -->
       <section id="team">
@@ -176,6 +178,8 @@
         </div>
         <img src="images/logo_footer.png" alt="Cotiviti-Logo" width="290" height="50">
       </div>
+      <a href="#hero" id="back-to-top"><i class='bx bx-chevron-up'></i></a>
     </footer>
+    
   </body>
 </html>
