--- a/Airtravel/index.html
+++ b/Airtravel/index.html
@@ -51,23 +51,25 @@
                 <div class="destination">
                   <img src="images/svg/earth.svg" alt="Globe" />
                   <div class="whereto">
-                    <p>Destination</p>
-                    <h3>Where to?</h3>
+                    <label for="">Destination</label><br>
+                    <input type="text" placeholder="Where to?">
                   </div>
                 </div>
 
                 <div class="destination">
                   <img src="images/svg/calender.svg" alt="Calender" />
                   <div class="whereto">
-                    <p>Date</p>
-                    <h3>MM / DD / YY</h3>
+                    <label for="">Date</label><br>
+                    <input type="text" placeholder="MM / DD / YY">
+                    
                   </div>
                 </div>
                 <div class="destination luggage">
                   <img src="images/svg/luggage.svg" alt="Luggage" />
                   <div class="whereto">
-                    <p>Guests</p>
-                    <h3>2 adults</h3>
+                    <label for="">Guests</label><br>
+                    <input type="number" placeholder="2 adults">
+                    
                   </div>
                 </div>
                 <div class="search-box">
