--- a/lftechnology/index.html
+++ b/lftechnology/index.html
@@ -101,7 +101,7 @@
             </div>
       
             <div class="text">
-              <p class="green path">’’</p>
+              <p class="green path">’’ ’’</p>
               <p>It would have taken months to build the product team that we <strong>inherited overnight </strong>with Leapfrog.<strong>They’re built for startup speed,</strong> and they have consistently delivered a well-engineered product for us.</p>
             </div>
           </div>
