--- a/lftechnology/index.html
+++ b/lftechnology/index.html
@@ -53,7 +53,7 @@
             
           </div>
           <div class="herovideo">
-            <video src="">dd</video>
+            <iframe src="https://player.vimeo.com/video/900731959?&autoplay=1&controls=0&muted=1&loop=1&title=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" class="banner__video-iframe" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Leapfrog Technology | Innovate better, faster" data-ready="true" width="581px" height="581px"></iframe>
           </div>
         </div>
       </section>
@@ -101,7 +101,7 @@
             </div>
       
             <div class="text">
-              <p class="green path">’’ ’’</p>
+              <p class="green path">’’</p>
               <p>It would have taken months to build the product team that we <strong>inherited overnight </strong>with Leapfrog.<strong>They’re built for startup speed,</strong> and they have consistently delivered a well-engineered product for us.</p>
             </div>
           </div>
