--- a/Airtravel/index.html
+++ b/Airtravel/index.html
@@ -60,7 +60,7 @@
                   <img src="images/svg/calender.svg" alt="Calender" />
                   <div class="whereto">
                     <label for="">Date</label><br>
-                    <input type="date" placeholder="MM/DD/YY" id="datepicker" onfocus="this.type= 'date'" onblur="this.type= 'text'">
+                    <input type="text" placeholder="MM/DD/YY" id="datepicker">
                     
                   </div>
                 </div>
