--- a/lftechnology/index.html
+++ b/lftechnology/index.html
@@ -163,7 +163,7 @@
         <div class="header">
           <ul>
             <li class="first">
-              <a  href="#">
+              <a href="#">
                 <img src="images/svg/product.svg" alt="Icon" />
                 <p>Products & Technology</p>
               </a>
@@ -194,7 +194,34 @@
             </li>
           </ul>
         </div>
+        <div class="code-class">
+          <div class="container">
+            <div class="flex">
+              <div class="flesx1">
+                <p>PRODUCTS & TECHNOLOGY</p>
+                <h2><span class="green">Deliver value,</span> not just products</h2>
+                <h5 class="para">
+                  Build digital experiences people love to use. Learn how we use
+                  battle-tested processes to systematically design and develop
+                  software that solves problems, delights users, and optimizes
+                  businesses.
+                </h5>
+                <div class="btncode">
+                  <a href="#">
+                    <span>Explore Product Engineering </span>
+                    <i class='bx bx-right-arrow-alt'></i>
+                </a>
+                </div>
+                
+              </div>
+              <div class="flesx2">
+                <img src="images/svg/explore-product-2.svg" alt="image-graph" width="460" height="549">
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
+      
     </main>
   </body>
 </html>
