bootstrap and js

--- a/bootstrap/Net-Tv/index.html
+++ b/bootstrap/Net-Tv/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <h2>Our Features</h2>
         <div class="row">
-          <div class="col-4">
+          <div class="col-4 col-lg-4">
             <img src="images/TV-1.svg" alt="" />
             <h5>4K HDR</h5>
             <p>
@@ -25,14 +25,14 @@
               processing.
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-4 col-sm-4">
             <img src="images/chromecast-1.svg" alt="" />
             <h5>Chromecast built-in</h5>
             <p>
               Easily cast your favourite movies, music and more to your TV with Chromecast built-in <sup>TM</sup>
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-4 col-sm-4">
             <img src="images/TV-1.svg" alt="" />
             <h5>4K HDR</h5>
             <p>
@@ -41,21 +41,21 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-4 col-sm-4">
             <img src="images/google-play-games.svg" alt="" />
             <h5>Google Play</h5>
             <p>
               No matter what you're looking for, Google Play has it all. Get your movies, TV, books, apps, games all in one place.
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-4 col-sm-4">
             <img src="images/google-assistant-1.svg" alt="" />
             <h5>Voice Search</h5>
             <p>
               Just say what you want to see with voice search.
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-4 col-sm-4">
             <img src="images/google-play-games.svg" alt="" />
             <h5>Google Play Games</h5>
             <p>
